<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/nav_equipment"
        android:icon="@drawable/ic_nav_equipment"
        android:title="@string/nav_equipment" />

    <item
        android:id="@+id/nav_feed"
        android:icon="@drawable/ic_nav_feed"
        android:title="@string/nav_feed" />

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_nav_report"
        android:title="@string/nav_report" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />

</menu>
